autotests/syntax-tests/tests/negative/negative101.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var $FORWARD Name Name = : = ; = ; } ; 